--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -244,6 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"Seite 'Neuer Tab'">
 <!ENTITY Ctr_anewtaburlcb	"Eigene Seite 'Neuer Tab' (Standard: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"Eigene private Seite 'Neuer Tab' (Standard: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpf	"Adressleiste nach dem Laden fokussieren">
 
 <!ENTITY Ctr_tab_tf_info1	"Textfelder erlauben Farbnamen sowie hexadezimale, RGB(A)- und HSL(A)-Werte.">
 <!ENTITY Ctr_tab_tf_info2	"Eingegebene Werte werden nicht auf Korrektheit überprüft!">
@@ -436,6 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Erste Schritte">
 <!ENTITY goCmd.label					"Los">
+<!ENTITY Ctr_showfx57pcomp				"Mit 'Firefox 57+' komapatible CTR Einstellungen hervorheben">
+<!ENTITY Ctr_showfx57pcomp1				"Grün - möglich mit userChrome.css oder userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Blau - von sich aus möglich">
+<!ENTITY Ctr_showfx57pcomp3				"Gelb - möglich mit WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Orange - nicht mehr benötigt">
+<!ENTITY Ctr_showfx57pcomp5				"Rot - nicht mehr möglich">
 <!ENTITY Ctr_menu_restart.label			"Neustarten">
 <!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei-Menü'">
 <!ENTITY Ctr_restartapp2				"'Neustarten'-Eintrag in der Hauptmenüschaltfläche">
