--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -244,6 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"URL de la página de nueva pestaña">
 <!ENTITY Ctr_anewtaburlcb	"URL personalizada de la página de nueva pestaña (predeterminada: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"URL personalizada de nueva pestaña privada (predeterminada: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
 
 <!ENTITY Ctr_tab_tf_info1	"Están soportadas entradas de nombres de colores, códigos hexadecimales, y valores rgb(a) y hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"¡Las entradas no serán validadas!">
@@ -436,6 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"C">
 <!ENTITY appMenuGettingStarted.label	"Comenzar">
 <!ENTITY goCmd.label					"Ir">
+<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
+<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
+<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
+<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"'Reiniciar' en el menú de &brandShortName; y el menú 'Archivo'">
 <!ENTITY Ctr_restartapp2				"'Reiniciar' en el menú de panel principal">
