--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -244,6 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"Uue kaardi lehe aadress">
 <!ENTITY Ctr_anewtaburlcb	"Uue kaardi lehe kohandatud aadress (vaikimisi: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"Uue privaatse kaardi lehe kohandatud aadress (vaikimisi: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
 
 <!ENTITY Ctr_tab_tf_info1	"Sisestada saab: värvinimed, kuuskoodid (hexcodes), rgb(a) ja hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"Sisendeid ei valideerita!">
@@ -436,6 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Alustamine">
 <!ENTITY goCmd.label					"Mine">
+<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
+<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
+<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
+<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
 <!ENTITY Ctr_menu_restart.label			"Taaskäivita">
 <!ENTITY Ctr_restartapp					"Näita &brandShortName;i nupu menüüs ja menüüs Fail kirjet 'Taaskäivita'">
 <!ENTITY Ctr_restartapp2				"Näita paneelimenüüs kirjet 'Taaskäivita'">
