--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -244,6 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"URL de nouvel onglet et de page d'accueil privée">
 <!ENTITY Ctr_anewtaburlcb	"Modifier l'URL de nouvel onglet (« about:newtab » par défaut) :">
 <!ENTITY Ctr_anewtaburlpcb	"Modifier l'URL d'accueil de navigation privée (« about:privatebrowsing » par défaut) :">
+<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
 
 <!ENTITY Ctr_tab_tf_info1	"Les noms de couleurs, les codes hexadécimaux, les valeurs RVB(A) et TSL(A) sont pris en charge.">
 <!ENTITY Ctr_tab_tf_info2	"Les saisies ne seront pas vérifiées !">
@@ -436,6 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"U">
 <!ENTITY appMenuGettingStarted.label	"Commencer">
 <!ENTITY goCmd.label					"Se rendre à la page indiquée dans la barre d'adresse">
+<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
+<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
+<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
+<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
 <!ENTITY Ctr_menu_restart.label			"Redémarrer">
 <!ENTITY Ctr_restartapp					"Afficher « Redémarrer » dans le menu « Fichier » et dans celui de l'ancien bouton &brandShortName;">
 <!ENTITY Ctr_restartapp2				"Afficher « Redémarrer » dans le panneau du bouton de menu">
