--- a/xpi/locale/nl/options.dtd
+++ b/xpi/locale/nl/options.dtd
@@ -244,6 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"URL van Nieuw-tabbladpagina">
 <!ENTITY Ctr_anewtaburlcb	"Aangepaste URL voor Nieuw-tabbladpagina (standaard: ‘about:newtab’)">
 <!ENTITY Ctr_anewtaburlpcb	"Aangepaste URL voor Nieuw-privétabbladpagina (standaard: ‘about:privatebrowsing’)">
+<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
 
 <!ENTITY Ctr_tab_tf_info1	"Kleurnamen, hex-codes, rgb(a)- en hsl(a)-waarden worden ondersteund.">
 <!ENTITY Ctr_tab_tf_info2	"Invoerwaarden worden niet gevalideerd!">
@@ -436,6 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"d">
 <!ENTITY appMenuGettingStarted.label	"Aan de slag">
 <!ENTITY goCmd.label					"Gaan">
+<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
+<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
+<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
+<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
 <!ENTITY Ctr_menu_restart.label			"Herstarten">
 <!ENTITY Ctr_restartapp					"‘Herstarten’ tonen in menu &brandShortName; en menu Bestand">
 <!ENTITY Ctr_restartapp2				"‘Herstarten’ tonen in hoofdpaneelmenu">
