--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -244,6 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"Nyt faneblad-URL-side">
 <!ENTITY Ctr_anewtaburlcb	"Brugerdefineret nyt faneblad-URL-side (standard: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"Brugerdefineret privat nyt faneblad side url (standard: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
 
 <!ENTITY Ctr_tab_tf_info1	"Farvenavne, heks-koder, rgb(a), og hsl(a) værdier er understøttet.">
 <!ENTITY Ctr_tab_tf_info2	"Indtastede værdier valideres ikke!">
@@ -436,6 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"I gang">
 <!ENTITY goCmd.label					"Gå">
+<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
+<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
+<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
+<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
 <!ENTITY Ctr_menu_restart.label			"Genstart">
 <!ENTITY Ctr_restartapp					"Vis 'Genstart' i &brandShortName;-menu og Filer-menu">
 <!ENTITY Ctr_restartapp2				"Vis 'Genstart' i hovedpanelmenu">
