Updated Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -244,7 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"URL strani novega zavihka">
 <!ENTITY Ctr_anewtaburlcb	"URL strani novega zavihka po meri (privzeto: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"URL strani novega zasebnega zavihka po meri (privzeto: 'about:privatebrowsing')">
-<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
+<!ENTITY Ctr_anewtaburlpf	"Po nalaganju se osredotoči na naslovno vrstico">
 
 <!ENTITY Ctr_tab_tf_info1	"Podprta so imena barv, šestnajstiške kode, rga(a) in hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"Vnosi ne bodo preverjeni!">
@@ -437,17 +437,17 @@
 <!ENTITY Ctr_addon-bar.accesskey		"d">
 <!ENTITY appMenuGettingStarted.label	"Začetek">
 <!ENTITY goCmd.label					"Pojdi">
-<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
-<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
-<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
-<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
-<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp				"Poudari možnosti CTR-a, ki so združljve s Firefoxom 57+">
+<!ENTITY Ctr_showfx57pcomp1				"Zelena - združljivost mogoča z datoteko userChrome.css ali userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Modra - združljivost privzeto mogoča">
+<!ENTITY Ctr_showfx57pcomp3				"Rumena - združljivost mogoča z API-jem WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Oranžna - ni več potrebno">
+<!ENTITY Ctr_showfx57pcomp5				"Rdeča - združljivost ni več mogoča">
 <!ENTITY Ctr_menu_restart.label			"Ponovno zaženi">
 <!ENTITY Ctr_restartapp					"'Ponovno zaženi' v programskem meniju in meniju Datoteka">
 <!ENTITY Ctr_restartapp2				"Prikaži 'Ponovno zaženi' v ploščastem meniju">
 <!ENTITY Ctr_contextfind				"Prikaži 'Najdi' in 'Najdi znova' v vsebinskem meniju orodnih vrstic">
-<!ENTITY Ctr_ctrnewinv					"Podčrtaj nove možnosti za trenutno različico &brandShortName;">
+<!ENTITY Ctr_ctrnewinv					"Podčrtaj nove možnosti za trenutno različico brskalnika &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Način CSS po meri">
 <!ENTITY Ctr_cssoverride2				"Koda CSS ne bo preverjena za napake!">
 
