--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -130,7 +130,7 @@
 <!ENTITY Ctr_backforward	"Liigutatavad tagasi-edasi nupud">
 <!ENTITY Ctr_nbcompact		"Vähenda asukohariba kõrgust">
 <!ENTITY Ctr_hide_bf_popup	"Hiirega klõpsates peida nupu ajaloo hüpikmenüü">
-<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
+<!ENTITY Ctr_hide_bf_pitem	"Eraldatud ajaloo hüpikud nuppude tagasi ja edasi jaoks">
 <!ENTITY Ctr_bf_space		"Vähenda nuppudevahelist tühimikku (kui võimalik)">
 <!ENTITY Ctr_noconicons		"Lehe kontekstimenüü: asenda ikoonid tekstiga (tagasi, edasi...)">
 <!ENTITY Ctr_prefpage		"Sätete leht / aken">
@@ -437,12 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Alustamine">
 <!ENTITY goCmd.label					"Mine">
-<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
-<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
-<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
-<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
-<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp				"Too esile 'Firefox 57+' ühilduvad CTR-i sätted">
+<!ENTITY Ctr_showfx57pcomp1				"Roheline - võimalik failidega userChrome.css või userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Sinine - võimalik vaikimisi">
+<!ENTITY Ctr_showfx57pcomp3				"Kollane - võimalik WebExtensionsiga">
+<!ENTITY Ctr_showfx57pcomp4				"Oranž - pole enam vajalik">
+<!ENTITY Ctr_showfx57pcomp5				"Punane - pole enam võimalik">
 <!ENTITY Ctr_menu_restart.label			"Taaskäivita">
 <!ENTITY Ctr_restartapp					"Näita &brandShortName;i nupu menüüs ja menüüs Fail kirjet 'Taaskäivita'">
 <!ENTITY Ctr_restartapp2				"Näita paneelimenüüs kirjet 'Taaskäivita'">
@@ -456,8 +456,8 @@
 <!ENTITY Ctr_openInNewWindow			"Ava sisestused uues aknas">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"Halda otsingumootoreid...">
+<!ENTITY Ctr_searchEndCap_label			"Otsi">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"T">
