--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -244,7 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"Bokowy URL nowego rejtarka">
 <!ENTITY Ctr_anewtaburlcb	"URL swójskego boka nowego rejtarka (standard: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"Swójski URL boka nowego rejtarka priwatnego modusa (standard: 'about:privatebrowsing')">
-<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
+<!ENTITY Ctr_anewtaburlpf	"Pó zacytanju fokus na adresowe pólo stajiś">
 
 <!ENTITY Ctr_tab_tf_info1	"Barwowe mjenja, heksadecimalne kody, rgb(a)- a hsl(a)-gódnoty se pódpěraju.">
 <!ENTITY Ctr_tab_tf_info2	"Zapódaśa se njepśespytuju!">
@@ -437,16 +437,16 @@
 <!ENTITY Ctr_addon-bar.accesskey		"R">
 <!ENTITY appMenuGettingStarted.label	"Prědne kšace">
 <!ENTITY goCmd.label					"Start">
-<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
-<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
-<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
-<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
-<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp				"CTR-nastajenja wuzwignuś, kótarež su kompatibelne z 'Firefox 57+'">
+<!ENTITY Ctr_showfx57pcomp1				"Zeleny - móžne z userChrome.css abo userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Módry - móžne pó standarźe">
+<!ENTITY Ctr_showfx57pcomp3				"Žołty - móžne z WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Oranžowy - wěcej njetrěbne">
+<!ENTITY Ctr_showfx57pcomp5				"Cerwjeny - wěcej njemóžne">
 <!ENTITY Ctr_menu_restart.label			"Znowego startowaś">
 <!ENTITY Ctr_restartapp					"Znowego startowaś w meniju '&brandShortName;' a w meniju Dataja pokazaś">
 <!ENTITY Ctr_restartapp2				"Znowego startowaś w głownem meniju pokazaś">
-<!ENTITY Ctr_contextfind				"'Pytaś' a 'Dalej pytaś' w kontekstowem meniju symbolowych rědkow pokazaś">
+<!ENTITY Ctr_contextfind				"'Na toś tom boku pytaś' a 'Dalej pytaś' w kontekstowem meniju symbolowych rědkow pokazaś">
 <!ENTITY Ctr_ctrnewinv					"Nowe nastajenja za aktualnu wersiju &brandShortName; pódšmarnuś">
 <!ENTITY Ctr_cssoverride				"Swójski CSS-kod">
 <!ENTITY Ctr_cssoverride2				"CSS-kod njebuźo se za zmólkami pśeglědowaś!">
