--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -244,7 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"URL strony noweho rajtarka">
 <!ENTITY Ctr_anewtaburlcb	"URL swójskeje strony noweho rajtarka (standard: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"Swójski URL strony noweho rajtarka priwatneho modusa (standard: 'about:privatebrowsing')">
-<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
+<!ENTITY Ctr_anewtaburlpf	"Po začitanju fokus na adresowe polo stajić">
 
 <!ENTITY Ctr_tab_tf_info1	"Barbne mjena, heksadecimalne kody, rgb(a)- a hsl(a)-hódnoty so podpěruja.">
 <!ENTITY Ctr_tab_tf_info2	"Zapodaća so njepřepruwuja!">
@@ -437,16 +437,16 @@
 <!ENTITY Ctr_addon-bar.accesskey		"d">
 <!ENTITY appMenuGettingStarted.label	"Prěnje kroki">
 <!ENTITY goCmd.label					"Start">
-<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
-<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
-<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
-<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
-<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp				"CTR-nastajenja wuzběhnyć, kotrež su kompatibelne z 'Firefox 57+'">
+<!ENTITY Ctr_showfx57pcomp1				"Zeleny - móžne z userChrome.css abo userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Módry - móžne po standardźe">
+<!ENTITY Ctr_showfx57pcomp3				"Žołty - móžne z WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Oranžowy - hižo njetrěbne">
+<!ENTITY Ctr_showfx57pcomp5				"Čerwjeny - hižo njemóžne">
 <!ENTITY Ctr_menu_restart.label			"Znowa startować">
 <!ENTITY Ctr_restartapp					"Znowa startować w meniju '&brandShortName;' a w meniju 'Dataja' pokazać">
 <!ENTITY Ctr_restartapp2				"Znowa startować w hłownym meniju pokazać">
-<!ENTITY Ctr_contextfind				"'Pytać' a 'Dale pytać' w kontekstowym meniju symbolowych lajstow pokazać">
+<!ENTITY Ctr_contextfind				"'Na tutej stronje pytać...' a 'Dale pytać' w kontekstowym meniju symbolowych lajstow pokazać">
 <!ENTITY Ctr_ctrnewinv					"Nowe wersije za aktualnu wersiju &brandShortName; podšmórnyć">
 <!ENTITY Ctr_cssoverride				"Swójski CSS-kod">
 <!ENTITY Ctr_cssoverride2				"CSS-kod njebudźe so za zmylkami přepruwować!">
