--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -244,7 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"Adres strony nowej karty">
 <!ENTITY Ctr_anewtaburlcb	"Niestandardowy adres strony nowej karty (domyślny: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"Niestandardowy adres strony nowej prywatnej karty (domyślny: 'about:privatebrowsing')">
-<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
+<!ENTITY Ctr_anewtaburlpf	"Uaktywnij pasek adresu po załadowaniu">
 
 <!ENTITY Ctr_tab_tf_info1	"Nazwy kolorów, kod szesnastkowy, wartości rgb(a) i hsl(a) są obsługiwane.">
 <!ENTITY Ctr_tab_tf_info2	"Wejścia nie będą zatwierdzane!">
@@ -437,12 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Pierwsze kroki">
 <!ENTITY goCmd.label					"Przejdź">
-<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
-<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
-<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
-<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
-<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp				"Uwydatnij opcje CTR kompatybilne z 'Firefox 57+'">
+<!ENTITY Ctr_showfx57pcomp1				"Zielone - możliwe za pomocą userChrome.css albo userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Niebieskie - możliwe domyślnie">
+<!ENTITY Ctr_showfx57pcomp3				"Żółte - możliwe za pomocą rozszerzeń WebExtension">
+<!ENTITY Ctr_showfx57pcomp4				"Pomarańczowe - już nie są potrzebne">
+<!ENTITY Ctr_showfx57pcomp5				"Czerwone - już nie są możliwe">
 <!ENTITY Ctr_menu_restart.label			"Zrestartuj">
 <!ENTITY Ctr_restartapp					"Pokaż 'Zrestartuj' w menu programu &brandShortName; oraz w menu Plik">
 <!ENTITY Ctr_restartapp2				"Pokaż 'Zrestartuj' w menu głównego panelu">
