--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -244,7 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"URL σελίδας νέας καρτέλας">
 <!ENTITY Ctr_anewtaburlcb	"Προσαρμοσμένο url σελίδας νέας καρτέλας (προεπιλογή: «about:newtab»)">
 <!ENTITY Ctr_anewtaburlpcb	"Προσαρμοσμένο url σελίδας νέας ιδιωτικής καρτέλας (προεπιλογή: «about:privatebrowsing»)">
-<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
+<!ENTITY Ctr_anewtaburlpf	"Εστίαση γραμμής τοποθεσιών μετά τη φόρτωση">
 
 <!ENTITY Ctr_tab_tf_info1	"Ονόματα χρωμάτων, δεκαεξαδικοί κωδικοί, τιμές rgb(a) και hsl(a) υποστηρίζονται.">
 <!ENTITY Ctr_tab_tf_info2	"Οι εισηγμένες τιμές δεν θα επικυρωθούν!">
@@ -437,12 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"λ">
 <!ENTITY appMenuGettingStarted.label	"Ξεκινώντας">
 <!ENTITY goCmd.label					"Μετάβαση">
-<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
-<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
-<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
-<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
-<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp				"Επισήμανση επιλογών του CTR κατά συμβατότητα με Firefox 57+">
+<!ENTITY Ctr_showfx57pcomp1				"Πράσινες - εφικτές με userChrome.css ή userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Μπλε - εφικτές κατά προεπιλογή">
+<!ENTITY Ctr_showfx57pcomp3				"Κίτρινες - εφικτές με WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Πορτοκαλί - δεν χρειάζονται πλέον">
+<!ENTITY Ctr_showfx57pcomp5				"Κόκκινες - μη εφικτές πλέον">
 <!ENTITY Ctr_menu_restart.label			"Επανεκκίνηση">
 <!ENTITY Ctr_restartapp					"Στοιχείο μενού «Επανεκκίνηση» στα μενού κουμπιού &brandShortName; και «Αρχείο»">
 <!ENTITY Ctr_restartapp2				"Στοιχείο μενού «Επανεκκίνηση» στο κύριο μενού πίνακα">
