--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -244,7 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"URL de nouvel onglet et de page d'accueil privée">
 <!ENTITY Ctr_anewtaburlcb	"Modifier l'URL de nouvel onglet (« about:newtab » par défaut) :">
 <!ENTITY Ctr_anewtaburlpcb	"Modifier l'URL d'accueil de navigation privée (« about:privatebrowsing » par défaut) :">
-<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
+<!ENTITY Ctr_anewtaburlpf	"Donner le focus à la barre de navigation après le chargement">
 
 <!ENTITY Ctr_tab_tf_info1	"Les noms de couleurs, les codes hexadécimaux, les valeurs RVB(A) et TSL(A) sont pris en charge.">
 <!ENTITY Ctr_tab_tf_info2	"Les saisies ne seront pas vérifiées !">
@@ -437,19 +437,19 @@
 <!ENTITY Ctr_addon-bar.accesskey		"U">
 <!ENTITY appMenuGettingStarted.label	"Commencer">
 <!ENTITY goCmd.label					"Se rendre à la page indiquée dans la barre d'adresse">
-<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
-<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
-<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
-<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
-<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp				"Surligner les options de CTR compatibles avec Firefox 57+">
+<!ENTITY Ctr_showfx57pcomp1				"Vert - possible via userChrome.css et userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Bleu - possible par défaut">
+<!ENTITY Ctr_showfx57pcomp3				"Jaune - possible avec des WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Orange - plus nécessaire">
+<!ENTITY Ctr_showfx57pcomp5				"Rouge - plus possible">
 <!ENTITY Ctr_menu_restart.label			"Redémarrer">
 <!ENTITY Ctr_restartapp					"Afficher « Redémarrer » dans le menu « Fichier » et dans celui de l'ancien bouton &brandShortName;">
 <!ENTITY Ctr_restartapp2				"Afficher « Redémarrer » dans le panneau du bouton de menu">
 <!ENTITY Ctr_contextfind				"Afficher « Rechercher dans la page... » et « Rechercher le suivant » dans le menu contextuel des barres d'outils">
 <!ENTITY Ctr_ctrnewinv					"Souligner les nouvelles options de la version actuelle de &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Code CSS personnalisé">
-<!ENTITY Ctr_cssoverride2				"Le code CSS ne sera pas vérifié, même en cas d'erreurs !">
+<!ENTITY Ctr_cssoverride2				"Le code ne sera pas vérifié, même en cas d'erreurs !">
 
 <!ENTITY Ctr_openInCurrentTab			"Ouvrir les entrées dans l'onglet actuel">
 <!ENTITY Ctr_openInNewTab				"Ouvrir les entrées dans un nouvel onglet">
