Update pt-BR translation

--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -244,7 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"URL da página 'Nova Aba'">
 <!ENTITY Ctr_anewtaburlcb	"URL personalizada da página 'Nova Aba' (padrão: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"URL personalizada da página nova aba privativa (padrão: 'about:privatebrowsing')">
-<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
+<!ENTITY Ctr_anewtaburlpf	"Focalizar barra de localização após carregar">
 
 <!ENTITY Ctr_tab_tf_info1	"Nomes de cores, códigos hex., valores rgb(a) e hsl(a) são suportados.">
 <!ENTITY Ctr_tab_tf_info2	"As entradas não serão validadas!">
@@ -437,16 +437,16 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Guia rápido">
 <!ENTITY goCmd.label					"Ir">
-<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
-<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
-<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
-<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
-<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp				"Destacar opções do CTR compatíveis com o 'Firefox 57+'">
+<!ENTITY Ctr_showfx57pcomp1				"Verde - possível com userChrome.css ou userContent.css">
+<!ENTITY Ctr_showfx57pcomp2				"Azul - possível por padrão">
+<!ENTITY Ctr_showfx57pcomp3				"Amarelo - possível com WebExtensions">
+<!ENTITY Ctr_showfx57pcomp4				"Laranja - não é mais necessário">
+<!ENTITY Ctr_showfx57pcomp5				"Vermelho - não é mais possível">
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"Exibir 'Reiniciar' no menu &brandShortName; e menu Arquivo">
 <!ENTITY Ctr_restartapp2				"Mostrar 'Reiniciar' do menu do painel">
-<!ENTITY Ctr_contextfind				"Mostrar 'Localizar' e 'Localizar Novamente' no menu de contexto das barras de ferramentas">
+<!ENTITY Ctr_contextfind				"Mostrar 'Localizar nesta página...' e 'Localizar novamente' no menu de contexto das barras de ferramentas">
 <!ENTITY Ctr_ctrnewinv					"Sublinhar novas opções da atual versão do &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Código CSS personalizado">
 <!ENTITY Ctr_cssoverride2				"O código CSS não será verificado por erros!">
