--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -244,7 +244,7 @@
 <!ENTITY Ctr_anewtaburl		"新しいタブの URL">
 <!ENTITY Ctr_anewtaburlcb	"新しいタブを以下の URL で開く (デフォルト値: about:newtab)">
 <!ENTITY Ctr_anewtaburlpcb	"新しいプライベートタブを以下の URL で開く (デフォルト値: about:privatebrowsing)">
-<!ENTITY Ctr_anewtaburlpf	"Focus location bar after loading">
+<!ENTITY Ctr_anewtaburlpf	"読み込み終了後ロケーションバーにフォーカスを移す">
 
 <!ENTITY Ctr_tab_tf_info1	"色名、16 進コード、RGB(A)、HSL(A) の値をサポートします。">
 <!ENTITY Ctr_tab_tf_info2	"入力値は検証されません。">
@@ -437,12 +437,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"入門">
 <!ENTITY goCmd.label					"移動">
-<!ENTITY Ctr_showfx57pcomp				"Emphasize 'Firefox 57+' compatible CTR options">
-<!ENTITY Ctr_showfx57pcomp1				"Green - possible with userChrome.css or userContent.css">
-<!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
-<!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
-<!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp				"'Firefox 57以上で互換性のあるCTRオプションを強調する">
+<!ENTITY Ctr_showfx57pcomp1				"緑色 - userChrome.css または userContent.css で可能">
+<!ENTITY Ctr_showfx57pcomp2				"青色 - デフォルトで可能">
+<!ENTITY Ctr_showfx57pcomp3				"黄色 - WebExtensions で可能">
+<!ENTITY Ctr_showfx57pcomp4				"橙色 - Firefox 57以上ではもう必要ない">
+<!ENTITY Ctr_showfx57pcomp5				"赤色 - Firefox 57以上では不可能">
 <!ENTITY Ctr_menu_restart.label			"リスタート">
 <!ENTITY Ctr_restartapp					"&brandShortName; メニューとファイルメニューにリスタートを追加する">
 <!ENTITY Ctr_restartapp2				"パネルメニューにリスタートを表示する">
