--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -26,8 +26,8 @@
 <!ENTITY Ctr_fontsize		"Taille de police :">
 
 <!ENTITY Ctr_cuibuttons		"Boutons :">
-<!ENTITY Ctr_cuibutnormal	"Taille normale">
-<!ENTITY Ctr_cuibutsmall	"Petits boutons">
+<!ENTITY Ctr_cuibutnormal	"Normaux">
+<!ENTITY Ctr_cuibutsmall	"Petits">
 <!ENTITY Ctr_cuimode		"Mode :">
 <!ENTITY Ctr_cuiico			"Icônes">
 <!ENTITY Ctr_cuiicotxt		"Icônes + texte">
