--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -441,7 +441,7 @@
 <!ENTITY Ctr_showfx57pcomp1				"绿色 - 以 userChrome.css 或 userContent.css 方式可用">
 <!ENTITY Ctr_showfx57pcomp2				"蓝色 - 默认可用">
 <!ENTITY Ctr_showfx57pcomp3				"黄色 - WebExtensions 可用">
-<!ENTITY Ctr_showfx57pcomp4				"橙色 - 不可用">
+<!ENTITY Ctr_showfx57pcomp4				"橙色 - 不再需要">
 <!ENTITY Ctr_showfx57pcomp5				"红色 - 不可用">
 <!ENTITY Ctr_menu_restart.label			"重启">
 <!ENTITY Ctr_restartapp					"在应用菜单和文件菜单中显示“重启”">
