--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -442,7 +442,7 @@
 <!ENTITY Ctr_showfx57pcomp2				"Blau - von sich aus möglich">
 <!ENTITY Ctr_showfx57pcomp3				"Gelb - möglich mit WebExtensions">
 <!ENTITY Ctr_showfx57pcomp4				"Orange - nicht mehr benötigt">
-<!ENTITY Ctr_showfx57pcomp5				"Rot - nicht mehr möglich">
+<!ENTITY Ctr_showfx57pcomp5				"Rot - nicht mehr möglich / vielleicht mit JS-Nutzerscripten möglich">
 <!ENTITY Ctr_menu_restart.label			"Neustarten">
 <!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei-Menü'">
 <!ENTITY Ctr_restartapp2				"'Neustarten'-Eintrag in der Hauptmenüschaltfläche">
