--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -442,7 +442,7 @@
 <!ENTITY Ctr_showfx57pcomp2				"Blue - possible by default">
 <!ENTITY Ctr_showfx57pcomp3				"Yellow - possible with WebExtensions">
 <!ENTITY Ctr_showfx57pcomp4				"Orange - not needed anymore">
-<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore">
+<!ENTITY Ctr_showfx57pcomp5				"Red - not possible anymore / maybe possible with user JS scripts">
 <!ENTITY Ctr_menu_restart.label			"Restart">
 <!ENTITY Ctr_restartapp					"Show 'Restart' in &brandShortName; menu and File menu">
 <!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
